--- a/ui-framework/UIFrameworkDemo/xbmuifklib/src/main/res/values/strings.xml
+++ b/ui-framework/UIFrameworkDemo/xbmuifklib/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
 	<string name = "app_name">XbmUiFkLib</string>
+	<string name="error_drm_not_supported">保护内容不受支持的API级别低于18</string>
+
+	<string name="error_drm_unsupported_scheme">这个设备不支持所需的数字版权管理方案</string>
+
+	<string name="error_drm_unknown">一个未知的DRM错误发生</string>
+
+	<string name="error_no_decoder">这个设备不提供一个译码器 <xliff:g id="mime_type">%1$s</xliff:g></string>
+
+	<string name="error_no_secure_decoder">这个设备不提供一个安全的解码器 <xliff:g id="mime_type">%1$s</xliff:g></string>
+
+	<string name="error_querying_decoders">无法查询设备解码器</string>
+
+	<string name="error_instantiating_decoder">不能实例化译码器 <xliff:g id="decoder_name">%1$s</xliff:g></string>
+
+	<string name="storage_permission_denied">权限访问存储被拒绝</string>
 </resources>
