增加了滑动返回的功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
 		inside, as they had only one candle.The furniture was old and worn. There were six children
 		crowded into the tiny space.Their mother was doing the washing at the same time as putting
 		the baby to sleep.</string>
+	<string name = "desc_slide_back">滑动返回</string>
 </resources>
