添加了下拉刷新的功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
 		crowded into the tiny space.Their mother was doing the washing at the same time as putting
 		the baby to sleep.</string>
 	<string name = "desc_slide_back">滑动返回</string>
+	<string name = "title_activity_style_water_drop">苹果水滴</string>
+	<string name = "title_activity_style_wave_swip">全屏水波</string>
+	<string name = "title_activity_practice_repast">餐饮美食</string>
 </resources>
