--- a/ui-framework/UIFrameworkDemo/xbmuifklib/src/main/res/values/strings.xml
+++ b/ui-framework/UIFrameworkDemo/xbmuifklib/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
 	<string name="error_instantiating_decoder">不能实例化译码器 <xliff:g id="decoder_name">%1$s</xliff:g></string>
 
 	<string name="storage_permission_denied">权限访问存储被拒绝</string>
+	<string name="loading">正在加载中...</string>
+	<string name="load_failed">加载失败，请点我重试</string>
+	<string name="load_end">没有更多数据</string>
 </resources>
