添加了组件之间的过度动画功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
@@ -49,5 +49,8 @@
 	<string name = "title_activity_style_wave_swip">全屏水波</string>
 	<string name = "title_activity_practice_repast">餐饮美食</string>
 	<string name="title_activity_practice_banner">滚动广告</string>
+	<string name = "effect1">效果1</string>
+	<string name = "effect2">效果2</string>
+	<string name = "effect3">效果3</string>
 
 </resources>
