--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/strings.xml
@@ -55,5 +55,14 @@
 	<string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
 		magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
 	<string name = "permission_request_denied">需要相应的权限</string>
-
+	<string name="transition_reveal1">transition_reveal1</string>
+	<string name="square_red_name">square_red</string>
+	<string name="square_blue_name">square_blue</string>
+	<string name="square_green_name">square_green</string>
+	<string name="sample_blue_title">sample_blue_title</string>
+	<string name="medium_text">Porchetta landjaeger tail meatball t-bone spare ribs. Sirloin pork chop bacon pork belly strip steak. Porchetta ham meatball pig salami short ribs jowl spare ribs sirloin tongue jerky cupim chuck.</string>
+	<string name="reveal_body1">Circular Reveal Animation starting from the center of target view</string>
+	<string name="reveal_body2">Circular Reveal Animation starting from touch coordinates</string>
+	<string name="reveal_body3">View layout change animation with Circular Reveal Animation on finish</string>
+	<string name="reveal_body4">Circular Reveal Animation from top with nested animations on end</string>
 </resources>
